@@ -2,6 +2,9 @@
 use = egg:Paste#http
 host = 0.0.0.0
 port = 5000
+# use_threadpool = True
+# threadpool_workers = 1
+# threadpool_spawn_if_under = 1
 
 [composite:main]
 use = egg:Paste#urlmap
