@@ -4,6 +4,10 @@ Changelog
 1.0rc5 - unreleased
 -------------------
 
+* Add javascript / css include support to WSGIResolver.
+
+* Refactoring if WSGI middleware to use WebOb better and fix corner cases.
+
 * Use same xpath prefix for css:if-not-content and css:if-content.
 
 * Add support for @if-not-path.
